Apply the code formatter from spring-projects/spring-boot/eclipse/eclipse-code-formatter.xml